# aip_launcher

aip_urdf_compiler/: CMakeLists.txt  package.xml  readme.md
aip_urdf_compiler/cmake/: aip_cmake_urdf_compile.cmake
aip_urdf_compiler/scripts/: compile_urdf.py
aip_urdf_compiler/templates/: sensor_unit.xacro.template
aip_urdf_compiler/tests/: urdf_diff.py
aip_x1_launch/: package.xml
aip_x1_launch/config/: concatenate_and_time_sync_node.param.yaml
aip_x1_launch/launch/: lidar.launch.xml  pointcloud_preprocessor.launch.py  sensing.launch.xml
aip_x2_gen2_launch/: package.xml
aip_x2_gen2_launch/config/: blockage_diagnostics_param_file.yaml  simple_object_merger.param.yaml
aip_x2_gen2_launch/launch/: gnss.launch.xml  hesai_OT128.launch.xml  hesai_QT128.launch.xml  imu.launch.xml  lidar.launch.xml  nebula_node_container.launch.py  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml
aip_x2_launch/config/: concatenate_and_time_sync_node.param.yaml
aip_x2_launch/launch/: lidar.launch.xml  pointcloud_preprocessor.launch.py
aip_xx1_description/: CMakeLists.txt  package.xml
aip_xx1_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_xx1_gen2_description/: CMakeLists.txt  package.xml
aip_xx1_gen2_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_xx1_gen2_launch/: CMakeLists.txt  package.xml
aip_xx1_gen2_launch/config/: concatenate_and_time_sync_node.param.yaml  lidar_gen2.yaml  mosaic_x5_rover.param.yaml
aip_xx1_launch/: package.xml
aip_xx1_launch/launch/: lidar.launch.xml  (+1 more)
(+33 files in other folders)
